[workspace]
members = [
    "lib",
    "program",
    "script"
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "1.0"

[patch.crates-io]
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
