[package]
name = "script"
version = "0.1.0"
edition = "2021"
default-run = "defi"

[[bin]]
name = "defi"
path = "src/bin/defi.rs"

[[bin]]
name = "proof"
path = "src/bin/proof.rs"

[dependencies]
sp1-sdk = "5.0.8"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
defi-lib = { path = "../lib" }
dotenv = "0.15.0"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"

anyhow = "1.0"

[build-dependencies]
sp1-build = "5.0.8"
